# active-learning

./: .gitignore  README.md  app.sh  pyproject.toml  sama_app.sh
active_learning/: al_config.yaml  local.py  seed.py
active_learning/adapters/: README.md
active_learning/api/: __init__.py  config_service.py  main.py  progress.py  query_cache.py  schemas.py  thumbnail_service.py
active_learning/cli/: common.py
active_learning/core/: README.md  __init__.py  config.py  logger.py
active_learning/integrations/: README.md  __init__.py
active_learning/integrations/crid/: README.md  (+2 more)
active_learning/providers/: README.md  bald.py  entropy.py  inference.py  mc_dropout.py  unet.py
active_learning/scorers/: README.md  _cache.py  brightness.py
active_learning/selectors/: README.md  __init__.py  alges.py  coreset.py  uncertainty.py
active_learning/sinks/: README.md  mosaic.py
active_learning/strategies/: README.md  alges.py  alges_coreset.py  coreset.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  styles.css
sama_frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
sama_frontend/src/: App.vue  styles.css
scripts/: README.md  compare_strategies.py  compute_stats.py  compute_uncertainty.py  extract_features.py  find_bad_images.py  list_duplicate_pool_blobs.py  overlay_helpers.py  show_dark.py  show_outliers.py  sweep_alpha.py
tests/: README.md  test_api_config.py  test_api_jobs.py  test_api_query.py  test_brightness_predicate.py  test_cache_namespace.py  test_config.py  test_crid_provider_source.py  test_local_cli.py  test_local_source.py  test_orchestration.py  test_overlay_helpers.py  test_parse_query_brightness.py  test_provider.py  test_sama_sink.py  test_selection_progress.py  test_selectors.py  test_target_class_uncertainty.py  test_tfdata_loader.py  test_time_gap.py  test_web_seed.py
(+41 files in other folders)
