[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "active-learning"
version = "0.1.0"
description = "Reusable active learning selection, scoring, and interface tooling"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26,<2",
    "opencv-python-headless>=4.10,<5",
    "Pillow>=10,<12",
    "ruamel.yaml>=0.18,<1",
    "scipy>=1.11,<2",
    "tensorflow>=2.16,<2.17; platform_system != 'Darwin' or platform_machine != 'arm64'",
    "tensorflow-macos>=2.16,<2.17; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "tensorflow-metal>=1.1,<2; platform_system == 'Darwin'",
    "tqdm>=4.66,<5",
]

[project.optional-dependencies]
app = [
    "fastapi>=0.115,<1",
    "pydantic>=2.10,<3",
    "uvicorn[standard]>=0.30,<1",
]
crid = [
    "azure-common>=1.1.28,<2",
    "azure-storage-blob>=2,<3",
    "azure-storage-queue>=2,<3",
    "elasticsearch>=7,<8",
    "ipython>=8.18,<9",
    "ipywidgets>=8.1,<9",
    "pandas>=2.2,<3",
    "psycopg2-binary>=2.9,<3",
    "pytz>=2024.1,<2026",
    "rasterio>=1.3,<2",
    "requests>=2.32,<3",
    "setuptools>=68",
    "shapely>=2,<3",
    "swifter>=1.4,<2",
]
test = [
    "pytest>=8.3,<9",
    "pytest-cov>=5,<6",
]

[project.scripts]
active-learning-seed = "active_learning.seed:main"
active-learning-local = "active_learning.local:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
active_learning = ["al_config.yaml"]

[tool.setuptools.packages.find]
where = ["."]
include = ["active_learning*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
per-file-ignores = { "scripts/**/*.py" = ["E402"], "tests/**/*.py" = ["E402"] }
